--- a/styles/style.css
+++ b/styles/style.css
@@ -103,4 +103,40 @@ ul li a:hover{
     outline: none;
 }
 
+.srch:focus{
+    outline: none;
+}
+.content{
+    width: 1200px;
+    height: auto;
+    margin: auto;
+    color: white;
+    position:relative;
+    
+}
+.content.par{
+    padding-left: 20px;
+    padding-bottom: 25px;
+    font-family: Arial;
+    letter-spacing: 1.2px;
+    line-height: 30px;
+}
 
+.content h3{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    padding-left: 20px;
+    margin-left: 9%;
+    letter-spacing: 2px;
+    /* text-align: left; */
+   
+    
+
+
+}
+.content.cn{
+    width: 160;
+    height: 40px;
+    background: orange;
+    border: none;
+}
