--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,7 @@ ul li a:hover{
     margin: auto;
     color: white;
     position:relative;
+    padding: 5px;
     
 }
 .content.par{
@@ -122,15 +123,13 @@ ul li a:hover{
     line-height: 30px;
 }
 
-.content h3{
-    font-family: 'Times New Roman';
-    font-size: 50px;
+.content h2{
+    font-family:'Times New Roman';
+    font-size: 40px;
     padding-left: 20px;
     margin-left: 9%;
     letter-spacing: 2px;
-    /* text-align: left; */
-   
-    
+    text-align: left;
 
 
 }
@@ -139,4 +138,95 @@ ul li a:hover{
     height: 40px;
     background: orange;
     border: none;
+    margin-bottom: 10px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.cn:hover{
+    background-color: orange;
+}
+
+.content span{
+    color: orange;
+    font-size: 60pxs;
+}
+.form{
+    width: 250px;
+    height: 380px;
+    background: linear-gradient(to top,rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.5) 50%);
+    position: absolute;
+    top: 20px;
+    left: 870px;
+    border-radius: 10px;
+    padding: 25px;
+
+}
+.form h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: orange;
+    font-size: 22px;
+    background-color: white;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
+}
+
+.form input{
+    width: 240px;
+    height: transparent;
+    border-bottom: 1px solid orange;
+    border-top: none;
+    border-left: none;
+    color: white;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
+
+}
+
+::placeholder{
+    color: white;
+    font-family: Arial;
+
+}
+
+.btn{
+    width: 240px;
+    height: 40px;
+    background: orange;
+    border: none;
+    margin-top: 30px;
+    font-size: 18px;
+    border: radius 10px;
+    cursor: pointer;
+    color: orange;
+
+}
+.btn.hover{
+    background: white;
+    color: orange;
+}
+
+.btn a{
+    text-decoration: none;
+    color: black;
+    font-weight: 20px;
+    text-align:center;
+}
+
+.form .link a{
+    text-decoration: none;
+    color: orange;
+
+}
+
+.liw{
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
 }
